--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 
 <body>
 	<h1>My Tweets</h1>
-	<ul class="tweets"></ul>
+	<div class="tweets"></ul>
 
 <script src="js/jquery-1.11.1.min.js"></script>	
-<script src="js/searchTwitter.js"></script>
+<script src="js/searchTwitter.jquery.js "></script>
 <script>
-	$('ul.tweets').queryTwitter('@jeffre_way');
+	$('div.tweets').queryTwitter();
 
 </script>
 </body>
