--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 <script src="js/jquery-1.11.1.min.js"></script>	
 <script src="js/searchTwitter.jquery.js "></script>
 <script>
-	$('div.tweets').queryTwitter();
+	$('div.tweets').queryTwitter({
+		search: 'dogs'
+	});
 
 </script>
 </body>
