--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
 <script src="js/searchTwitter.jquery.js "></script>
 <script>
 	$('div.tweets').queryTwitter({
-		search: 'dogs'
+		search: 'Justin Biener',
+		limit: 5,
+		onComplete: function(){
+			console.log(arguments);
+		},
+		refresh: 10000
 	});
 
 </script>
